# web-search-agent

./: .env.example  pyproject.toml
.github/workflows/: weekly-agent.yml
config/: sources.yml  themes.yml
docs/: FIRST-LIVE-RUN.md  OPERATIONS.md  SECRETS.md  SHEET-SETUP.md  WIF-SETUP.md
src/: __init__.py  main.py
src/collectors/: base.py  community.py  http.py  official.py  parser.py  registry.py  runner.py
src/core/: config.py  models.py  settings.py  time_utils.py
src/outputs/: __init__.py  sheets.py
src/pipeline/: classify.py  dates.py  dedupe.py  discovery.py  scoring.py  summarize.py
tests/: test_classify.py  test_dates.py  test_dedupe.py  test_discovery.py  test_parser.py  test_summary.py  test_theme.py
